# k8s-pod-health

./: .gitignore  CLAUDE.md  Plan.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  security.yml
examples/: sick-cluster.json
src/pod_health/: ai_advisor.py  analyzer.py  cli.py  parser.py  renderer.py
tests/: test_analyzer.py  test_parser.py
tests/fixtures/: crashloop.json  duplicate_errors.json  healthy.json  imagepull.json  init_failure.json  mixed.json  oomkilled.json  pending.json  single_pod.json
